portfolio-lightbox__content height 90vh; solve overflow

--- a/team.css
+++ b/team.css
@@ -67,6 +67,7 @@ a:visited {
     background: black;
     padding: 1em;
     position: relative;
+    height: 90vh;
 }
 
 
